--- a/Uppgift 2/typescript-events/src/App.css
+++ b/Uppgift 2/typescript-events/src/App.css
@@ -2,26 +2,35 @@
     margin: 0 auto;
     padding-inline: 1rem;
     max-width: 900px;
-}
-
-.d-flex {
-    display: flex;
-}
-
-.justify-between {
+  }
+  .d-flex { display: flex; }
+  .justify-between { 
     justify-content: space-between;
     align-items: center;
-}
-
-.btn {
+  }
+  .btn {
     padding: .4em 1em;
     border-radius: 100vh;
     border: 0;
     background-color: transparent;
     cursor: pointer;
-}
-
-.btn-clear {
+  }
+  .btn-clear {
     font-weight: bold;
     font-size: 1rem;
-}
+  }
+  .btn-outline {
+    font-weight: bold;
+    font-size: 1rem;
+    border: 1px solid #c2c2c2;
+    transition: background-color 100ms ease-out;
+  }
+  .btn-outline:hover {
+    background-color: #efefef;
+  }
+  .btn-outline:active {
+    background-color: #c3c3c3;
+  }
+  .ml-auto {
+    margin-left: auto;
+  }
