--- a/Uppgift 2/typescript-events/src/App.css
+++ b/Uppgift 2/typescript-events/src/App.css
@@ -3,11 +3,13 @@
     padding-inline: 1rem;
     max-width: 900px;
   }
+
   .d-flex { display: flex; }
   .justify-between { 
     justify-content: space-between;
     align-items: center;
   }
+  
   .btn {
     padding: .4em 1em;
     border-radius: 100vh;
@@ -15,22 +17,37 @@
     background-color: transparent;
     cursor: pointer;
   }
+
+  
   .btn-clear {
     font-weight: bold;
     font-size: 1rem;
   }
+  
+  .btn-clear:hover {
+    background-color: #edecec;
+    font-size: 20px;
+  }
+  
+
   .btn-outline {
     font-weight: bold;
     font-size: 1rem;
     border: 1px solid #c2c2c2;
     transition: background-color 100ms ease-out;
   }
+
   .btn-outline:hover {
     background-color: #efefef;
   }
+
   .btn-outline:active {
     background-color: #c3c3c3;
   }
+
   .ml-auto {
     margin-left: auto;
   }
+
+  
+  
