--- a/Uppgift 2/typescript-events/src/components/Events/EventCard.css
+++ b/Uppgift 2/typescript-events/src/components/Events/EventCard.css
@@ -1,15 +1,20 @@
 .card {
   border: 1px solid #c2c2c2;
-  padding: 1rem;
-  border-radius: .5rem;
-  margin-bottom: .5rem;
+  padding: 1.2rem;
+  border-radius: 2rem;
+  margin-bottom: 1rem;
   box-shadow: 3px 3px 5px #33333338;
   text-decoration: none;
-  color: #333;
+  color: #ffffff;
+  background: linear-gradient(#f15252, #243b55);
 }
-.card:hover {
-  background-color: #f1f1f1;
+
+
+
+.card:hover .evt-title {
+  font-size: 25px;
 }
+
 .card .evt-title {
   font-weight: bold;
   font-size: 1.1rem;
