--- a/Uppgift 2/typescript-events/src/components/Navbar/Navbar.css
+++ b/Uppgift 2/typescript-events/src/components/Navbar/Navbar.css
@@ -1,7 +1,15 @@
 .navbar {
-    margin-block: 2rem;
+    padding-top: 3rem;
+    margin-block: 1rem 0;
 }
+
+.container {
+    border-bottom: 2px solid #243b55;
+    padding: 3rem 0;
+}
+
 
 .navbar .title {
     font-size: 2.7rem;
 }
+
