--- a/Uppgift 2/typescript-events/src/components/AddEventModal/AddEventModal.css
+++ b/Uppgift 2/typescript-events/src/components/AddEventModal/AddEventModal.css
@@ -1,20 +1,20 @@
 .modal-bg {
     position: fixed;
     inset: 0;
-    background-color: #0000000e;
+    background-color: #a758580e;
   }
 
   .modal {
     position: relative;
     top: 10vh;
-    background-color: #fff;
+    background: linear-gradient(#000000, #434343);
     padding: 1rem;
     width: 80%;
     max-width: 900px;
     margin: 0 auto;
     border: 1px solid #c2c2c2;
     border-radius: 1rem;
-    box-shadow: 3px 3px 5px #33333338;
+    box-shadow: 6px 6px 8px #33333338;
   }
 
   .r-corner {
@@ -24,22 +24,25 @@
   }
 
   .btn-big {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     padding: 0;
     font-weight: bold;
+    color: #ffffff;
   }
 
   .modal-title {
     text-align: center;
     font-size: 2rem;
-    border-bottom: 1px solid #c2c2c2;
+    border-bottom: 1px solid #000000;
     padding-bottom: .5rem;
     margin-bottom: 2rem;
+    color: #ffffff;
   }
 
   .input-group {
     width: 100%;
     margin-bottom: 1rem;
+    color: #ffffff;
   }
 
   .input-group label {
@@ -51,7 +54,7 @@
     width: 100%;
     padding: .5em;
     border: 1px solid #c2c2c2;
-    border-radius: .5rem;
+    border-radius: .7rem;
   }
 
   textarea.form-control {
@@ -61,4 +64,8 @@
   .form-control:focus {
     outline: none;
     border-color: #5f5f5f;
+  }
+
+  .err-msg {
+    color: #ffffff;
   }
