--- a/Uppgift 2/typescript-events/src/components/Events/EventCard.css
+++ b/Uppgift 2/typescript-events/src/components/Events/EventCard.css
@@ -6,10 +6,8 @@
   box-shadow: 3px 3px 5px #33333338;
   text-decoration: none;
   color: #ffffff;
-  background: linear-gradient(#f15252, #243b55);
+  background: linear-gradient(#000000, #807f7f);
 }
-
-
 
 .card:hover .evt-title {
   font-size: 25px;
